# industrial-controls-learning-lab

./: .gitignore  .markdownlint.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  content_correction.yml  lab_proposal.yml  project_proposal.yml  question.yml
.github/workflows/: ci.yml
docs/: 00-learning-path.md  01-role-map.md  02-weekly-routine.md  03-portfolio-evidence.md  04-safety-boundary.md  05-reference-policy.md  06-glossary.md  07-future-capstone-handoff.md  08-publishing-checklist.md  09-curriculum-authoring-guide.md
docs/diagrams/: README.md  axis-troubleshooting-flow.md  equipment-state-machine.md  industrial-control-stack.md  learning-dependency-map.md  manufacturing-data-flow.md
docs/maintainer/: labels.md  release-checklist.md
examples/sql/: README.md  manufacturing-schema.sql
examples/structured-text/: E_EquipmentState.st  E_MotionBlockReason.st  FB_EquipmentStateMachine.st  FB_MotionPermission.st  README.md
labs/: README.md  lab-01-first-order-plant.md  lab-02-pid.md  lab-03-machine-state.md  lab-04-motion.md  lab-05-cyclic-timing.md  lab-06-manufacturing-data.md
learning/: README.md  week-00-industrial-control-stack.md  week-01-units-sampling-first-order.md  week-02-feedback-response-metrics.md  week-03-discrete-pid.md  week-04-plc-scan-structured-text.md  week-05-equipment-states-modes.md  week-06-interlocks-alarms-recovery.md  week-07-industrial-networks.md  week-08-ethercat.md  week-09-cia402.md  week-10-motion-profiles-homing.md  week-11-cyclic-execution.md  week-12-controller-interfaces.md  week-13-concurrency-configuration.md  week-14-factory-information-layers.md  week-15-industrial-integration.md  week-16-sql-traceability.md  week-17-oee-observability-security.md
learning/references/: deep-study.md
learning/reviews/: module-00-review.md  module-01-review.md  (+4 more)
modules/: 00-cs-to-controls-bridge.md  01-control-fundamentals.md  02-plc-machine-control.md  03-motion-and-industrial-networks.md  04-pc-based-controller.md  05-smart-manufacturing-software.md
progress/: README.md  progress-tracker.md
scripts/: bootstrap_git.sh  check_repo.py
templates/: architecture-decision-record.md  experiment-report.md  interview-story.md  progress-post.md  reference-note.md
tests/: test_cli.py  test_control.py  test_curriculum.py  test_machine.py  test_manufacturing.py  test_motion.py  test_timing.py
weekly/: week-00.md  week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md  week-13.md  week-14.md  week-15.md  week-16.md  week-17.md
(+12 files in other folders)
