[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-controls-learning-lab"
version = "0.1.0"
description = "Self-contained fundamentals lessons and simulation labs for industrial controls and smart manufacturing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Partho Adhikari" }]
keywords = ["control-systems", "motion-control", "plc", "ethercat", "industrial-automation", "smart-manufacturing", "education"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
industrial-controls-lab = "industrial_controls_lab.cli:main"

[project.urls]
Homepage = "https://github.com/parthoece/industrial-controls-learning-lab"
Documentation = "https://github.com/parthoece/industrial-controls-learning-lab/tree/main/learning"
Issues = "https://github.com/parthoece/industrial-controls-learning-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
